--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>message_calendar</title>
+  <title>Annemaries Reha</title>
   <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
   <script src="flutter_bootstrap.js" async></script>
 </body>
+
 
 </html>
